<resources>
    <string name="app_name">DiscgolfApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Navigation -->
    <string name="title_nav_my_discs">Mine discer</string>
    <string name="title_nav_play">Spill</string>
    <string name="title_nav_courses">Baner</string>
    <string name="nav_drawer_header_title">Discgolf</string>
    <string name="nav_drawer_header_text">Frisbeegolf applikasjon</string>
    <string name="settings_title">Innstillinger</string>
    <string name="courses_overview_list"> Baner fragment</string>
    <string name="course_poster">course_poster</string>
    <string name="course_name">course_name</string>
    <string name="course_area">course_area</string>
    <string name="user_profile">Profil</string>
    <string name="map_switch">List</string>

    <!-- Scorecard buttons -->
    <string name="create_scorecard">Opprett poengkort</string>
    <string name="create_scorecard_course_par_btn">Par</string>
    <string name="create_scorecard_personal_best_btn">Personlig beste</string>
    <string name="create_scorecard_leaderboard_record_btn">Rekord ledertavle</string>
    <string name="create_scorecard_personal_average_btn">Personlig gjennomsnitt</string>
    <string name="create_scorecard_custom_btn">Egendefinert</string>
    <string name="choose_course_text">Velg Bane:</string>
    <string name="no_course_selected">Ingen bane valgt</string>

    <!-- Discs strings -->
    <string name="my_discs">Mine Discer</string>
    <string name="disc_name">Disc navn:</string>
    <string name="disc_speed">Disc speed:</string>
    <string name="disc_glide">Disc glide:</string>
    <string name="disc_turn">Disc turn:</string>
    <string name="disc_fade">Disc fade:</string>
    <string name="name">Navn</string>
    <string name="speed">Speed</string>
    <string name="glide">Glide</string>
    <string name="turn">Turn</string>
    <string name="fade">Fade</string>
    <string name="disc_type">Type:</string>
    <string name="add_disc">Legg til ny disc</string>
    <string name="disc_manufacture">Produsent</string>
    <string name="disc_plastic">Plasttype</string>
    <string name="disc_weight">Vekt</string>
    <string name="disc_color">Farge</string>
    <string name="no_disc_name">Vennligs velg et navn</string>
    <string name="disc_stability">Stability (Turn + Fade) </string>

    <!-- Discs buttons -->
    <string name="save">Lagre</string>
    <string name="add_button">Legg til</string>
    <string name="gridButton">Flight path</string>
    <string name="edit_button">Edit</string>

    <!-- Discs Grid -->
    <string name="gridDescription">Visuelt rutenett som viser disc speed og stability</string>


    <string-array name="disc_type_array">
        <item>Putter</item>
        <item>Mid Range</item>
        <item>Fairway Driver</item>
        <item>Distance Driver</item>
    </string-array>


    <!-- Take Score -->
    <string name="hole_number_description">Hull</string>
    <string name="distance_description">Distanse</string>
    <string name="par_description">Par</string>
    <string name="next_hole">Neste hull</string>
    <string name="addToScoreBtnText">+</string>
    <string name="subtractFromScoreBtnText">-</string>
    <string name="parForHoleText">Par</string>
    <string name="currentScoreForHoleText">Score</string>
    <string name="currentHoleNumberText">Hull X</string>
    <string name="current_distance_for_hole_text">Distance</string>
    <string name="score_description">Score</string>

    <!-- Scoreboard -->
    <string name="scoreboard_text">Hull %d: par: %d, score: %d</string>
    <string name="scoreboard_text_total">Total score: %d (%+d)</string>
    <string name="scoreboard_text_total_par">Total par: %d</string>
    <string name="scoreboard_text_best_score">Best score: %d (%+d)</string>
    <string name="scoreboard_text_average_score">Gj.snitt score: %d (%+d)</string>

    <!-- Autentication -->
    <string name="sign_in">Du er nå logget inn som </string>
    <string name="sign_out_button">Logg ut</string>
    <string name="user_name">navn</string>
    <string name="user_email">epost</string>
    <string name="email">E-post</string>

    <string name="finish_scoreboard">Gå videre</string>
    <string name="scoreboard_ll_content_desc">Poeng for runden</string>
    <string name="prev_hole">Forrige hull</string>

    <!-- Course info -->
    <string name="toggleMapButtonText">Kart</string>
    <string name="weather_temperature_value">11ºC</string>
    <string name="weather_wind_speed">10 m/s</string>
    <string name="course_info_best_round">Beste runde: 74 (+13)</string>
    <string name="course_info_last_round">Forrige runde: 81 (+21)</string>
    <string name="course_info_average">Gjennomsnitt: 80.2 (+20.2)</string>
    <string name="show_prev_results">Se tidligere resultater</string>
    <string name="score_date">Score: %d, %s</string>
    <string name="choose_course">Velg bane</string>
    <string name="par_rating">Rating: 1002</string>
    <string name="hole_details">Par 3  100 m</string>
    <string name="rating_d">Rating: %d</string>
    <string name="finish_round">Fullfør runde</string>
    <string name="scoreboard_date_header">%s</string>
    <string name="scoreboard_course_name_header">%s</string>
    <string name="unknown_date">Ukjent Dato</string>
    <string name="scoreboard_course_name_placeholder">Ukjent Bane</string>
    <string name="course_info_avg_rating">Gjennomsnittsrating 1000.0</string>
    <string name="par_on_course">Par: 60</string>
    <string name="number_of_holes">Antall hull: 21</string>
    <string name="course_info_title">Bane informasjon</string>
    <string name="individual_course_stats_title">Individuelle presentasjoner</string>
    <string name="course_distance">Distanse: 1000 m</string>
    <string name="not_implemented_yet">Ikke implementert enda</string>
    <string name="add_friend_button">legg til venn</string>
    <string name="profile_picture">profle picture</string>
    <string name="connect_to_internet_to_get_courses">Koble til internett for å hente baner</string>
    <string name="connect_to_internet_to_get_course">Koble til internett for å hente baneinfo</string>
    <string name="friend_requests_button">venneforespørsler</string>
    <string name="friend_list_button">venneliste</string>
    <string name="accept_friend">Godta </string>
    <string name="decline_friend">Avslå</string>
    <string name="notification_message">Hei, lenge siden vi har sett deg! Spill en runde med frisbeegolf i dag!</string>
    <string name="unfinished_rounds">Ikke fullførte runder</string>
    <string name="could_not_find_unfinished_scorecards">Fant ingen ikke-fullførte poengkort</string>
    <string name="scorecards">Poengkort</string>
    <string name="friend_profile_name">Profil navn til bruker</string>
    <string name="switch_to_map_text" >Kart</string>


</resources>