<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragementTakeScoreLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.takescore.TakeScoreFragment">

    <Button
        android:id="@+id/increment_scorebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addToScoreBtnText"
        app:layout_constraintBottom_toTopOf="@+id/decrement_score_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline2" />

    <Button
        android:id="@+id/decrement_score_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtractFromScoreBtnText"
        app:layout_constraintBottom_toTopOf="@+id/nextHoleBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/increment_scorebutton" />

    <TextView
        android:id="@+id/parForHoleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/parForHoleText"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/distanceForCurrentHoleTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/distanceForCurrentHoleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_distance_for_hole_text"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toStartOf="@+id/parForHoleTextView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/currentScoreForHole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currentScoreForHoleText"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentHoleNumberTextView" />

    <TextView
        android:id="@+id/currentHoleNumberTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currentHoleNumberText"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/parForHoleTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchMaterial" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchMaterial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toggleMapButtonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="255dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="582dp" />

    <Button
        android:id="@+id/nextHoleBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/md_theme_dark_surfaceTint"
        android:text="@string/next_hole"
        android:textColor="@color/md_theme_dark_background"
        app:layout_constraintBottom_toBottomOf="@id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/decrement_score_button" />

</androidx.constraintlayout.widget.ConstraintLayout>