<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginTop="0dp"
    android:layout_marginEnd="20dp"
    android:layout_marginBottom="15dp"
    app:cardCornerRadius="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="192dp">

        <TextView
            android:id="@+id/discNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disc_name"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.037" />

        <TextView
            android:id="@+id/discTypeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/disc_type"
            app:layout_constraintBottom_toTopOf="@+id/discSpeedTextView"
            app:layout_constraintEnd_toEndOf="@+id/discNameTextView"
            app:layout_constraintHorizontal_bias="0.475"
            app:layout_constraintStart_toStartOf="@+id/discNameTextView"
            app:layout_constraintTop_toBottomOf="@+id/discNameTextView"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/discSpeedTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/disc_speed"
            app:layout_constraintEnd_toStartOf="@+id/discGlideTextView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/discGlideTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disc_glide"
            app:layout_constraintEnd_toStartOf="@+id/discTurnTextView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/discSpeedTextView"
            app:layout_constraintTop_toTopOf="@+id/discSpeedTextView" />

        <TextView
            android:id="@+id/discTurnTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disc_turn"
            app:layout_constraintEnd_toStartOf="@+id/discFadeTextView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/discGlideTextView"
            app:layout_constraintTop_toTopOf="@+id/discGlideTextView" />

        <TextView
            android:id="@+id/discFadeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disc_fade"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/discTurnTextView"
            app:layout_constraintTop_toTopOf="@+id/discTurnTextView" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/speed"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/discSpeedTextView"
            app:layout_constraintStart_toStartOf="@+id/discSpeedTextView"
            app:layout_constraintTop_toBottomOf="@+id/discNameTextView" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/turn"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/discTurnTextView"
            app:layout_constraintStart_toStartOf="@+id/discTurnTextView"
            app:layout_constraintTop_toTopOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fade"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/discFadeTextView"
            app:layout_constraintStart_toStartOf="@+id/discFadeTextView"
            app:layout_constraintTop_toTopOf="@+id/textView9" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/glide"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/discGlideTextView"
            app:layout_constraintStart_toStartOf="@+id/discGlideTextView"
            app:layout_constraintTop_toTopOf="@+id/textView2" />

        <TextView
            android:id="@+id/manufacturerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/disc_manufacture"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/discSpeedTextView"
            app:layout_constraintStart_toStartOf="@+id/discSpeedTextView"
            app:layout_constraintTop_toBottomOf="@+id/discSpeedTextView" />

        <TextView
            android:id="@+id/weightTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disc_weight"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/discGlideTextView"
            app:layout_constraintHorizontal_bias="0.428"
            app:layout_constraintStart_toStartOf="@+id/discGlideTextView"
            app:layout_constraintTop_toTopOf="@+id/manufacturerTextView" />

        <TextView
            android:id="@+id/plasticTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disc_plastic"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/discTurnTextView"
            app:layout_constraintStart_toStartOf="@+id/discTurnTextView"
            app:layout_constraintTop_toTopOf="@+id/weightTextView" />

        <TextView
            android:id="@+id/colorTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disc_color"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/discFadeTextView"
            app:layout_constraintHorizontal_bias="0.538"
            app:layout_constraintStart_toStartOf="@+id/discFadeTextView"
            app:layout_constraintTop_toTopOf="@+id/plasticTextView" />

        <TextView
            android:id="@+id/discManufactureTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/disc_manufacture"
            app:layout_constraintEnd_toEndOf="@+id/discSpeedTextView"
            app:layout_constraintStart_toStartOf="@+id/discSpeedTextView"
            app:layout_constraintTop_toBottomOf="@+id/manufacturerTextView" />

        <TextView
            android:id="@+id/discWeightTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disc_weight"
            app:layout_constraintEnd_toEndOf="@+id/discGlideTextView"
            app:layout_constraintStart_toStartOf="@+id/discGlideTextView"
            app:layout_constraintTop_toTopOf="@+id/discManufactureTextView" />

        <TextView
            android:id="@+id/discPlasticTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disc_plastic"
            app:layout_constraintEnd_toEndOf="@+id/discTurnTextView"
            app:layout_constraintStart_toStartOf="@+id/discTurnTextView"
            app:layout_constraintTop_toTopOf="@+id/discWeightTextView" />

        <TextView
            android:id="@+id/discColorTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disc_color"
            app:layout_constraintEnd_toEndOf="@+id/discFadeTextView"
            app:layout_constraintStart_toStartOf="@+id/discFadeTextView"
            app:layout_constraintTop_toTopOf="@+id/discPlasticTextView" />


        <!--<Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />-->


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>