<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/create_score_card_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.play.createscorecard.CreateScoreCardFragment">

    <Button
        android:id="@+id/personal_avg_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_scorecard_personal_average_btn"
        app:layout_constraintBottom_toTopOf="@+id/leaderboard_record"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personal_record_btn"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>

    <Button
        android:id="@+id/par_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_scorecard_course_par_btn"
        app:layout_constraintBottom_toTopOf="@+id/personal_record_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createScoreCardCourseNameTextView"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>

    <Button
        android:id="@+id/personal_record_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_scorecard_personal_best_btn"
        app:layout_constraintBottom_toTopOf="@+id/personal_avg_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/par_btn"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>

    <Button
        android:id="@+id/leaderboard_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_scorecard_leaderboard_record_btn"
        app:layout_constraintBottom_toTopOf="@+id/custom_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personal_avg_btn"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>

    <Button
        android:id="@+id/custom_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_scorecard_custom_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/leaderboard_record"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/createScoreCardTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_scorecard"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/createScoreCardCourseNameTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/createScoreCardCourseNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="32dp"
        android:text="@string/course_name"
        app:layout_constraintBottom_toTopOf="@+id/par_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createScoreCardTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>